--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,17 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+  <link rel = "stylesheet" type = "text/css" href ='/assets/css/bootstrap.css'>
+
 </head>
 <body>
 
+
+
 <%= yield %>
+
+
 
 </body>
 </html>
